--- a/style.css
+++ b/style.css
@@ -36,3 +36,57 @@ a{
     padding: 15px;
     background-color: white;
 }
+/*----------------------------------New Style-----------------------------------*/
+
+    
+
+ul{
+    list-style: none;
+    margin: 0;
+    padding: 0;
+}
+
+.listLabWorks{    
+    display: flex;
+    justify-content: space-around;    
+}
+.listLabWorks li{
+    font-size: 20px;
+    flex:12.5%;
+    border: 1px solid black;
+    border-radius: 5px;
+    text-align: center;
+    padding: 15px;
+    background-color: rgb(171, 255, 176);
+}
+.labContent{
+    display: flex;
+    align-items: flex-start;
+}
+.labItems{
+    display: flex;
+    justify-content: flex-end;
+    flex-direction: column;
+    width:20%;
+}
+.labItems li{
+    font-size: 20px;
+    /*width: 100%;*/    
+    border: 1px solid black;
+    border-radius: 5px;
+    text-align: center;
+    padding: 15px;
+    background-color: rgb(171, 255, 176);
+}
+.subitem{
+    width: 70%;
+    margin-left: 20%;
+}
+.content{
+    font-size: 20px;
+    width:80%;
+    padding: 30px;
+    border: 1px solid black;
+    border-radius: 15px;
+    
+}
